--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,13 @@
 * text=auto
-
-*.fig binary
-*.mat binary
+*.fig filter=lfs diff=lfs merge=lfs -text
+*.mat filter=lfs diff=lfs merge=lfs -text
 *.mdl binary diff merge=mlAutoMerge
 *.mdlp binary
 *.mex* binary
 *.mlapp binary
 *.mldatx binary
 *.mlproj binary
-*.mlx binary
+*.mlx filter=lfs diff=lfs merge=lfs -text
 *.p binary
 *.sfx binary
 *.sldd binary
@@ -16,7 +15,7 @@
 *.slmx binary merge=mlAutoMerge
 *.sltx binary
 *.slxc binary
-*.slx binary merge=mlAutoMerge
+*.slx filter=lfs diff=lfs merge=lfs -text
 *.slxp binary
 ## Other common binary file types
 *.docx binary
@@ -28,3 +27,6 @@
 Data_Videos/** filter=lfs diff=lfs merge=lfs -text
 *.avi filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
